--- a/beast-gtk/TODO
+++ b/beast-gtk/TODO
@@ -1,12 +1,15 @@
 URGENT:
-- router neds category menu
 - sampleview needs to be completed (view chunks)
 - piano roll: disable selection tools until they are implemented
 - put a WARNING somewhere about file format changes in future versions
 - subsynth cycle search algorithm
 - bsw_item_check_value(item,name,value) to filter non-valid objects property settings
 - terminology: s/pulse/square/, s/growing/rising/, s/shrinking/falling/ (saw)
-- remove GenOsc category after standard osc works ok
+- remove GenOsc plugin
+- Module LInk: show INFO not "porperties". the dialog: s/source/module/
+- Module Menu: add EDIT
+- help: QuickStart-Samples, QuickStart-Synthesis, QuickStart-Songs
+- mouse over module or i/o-channels: set tooltips as status if status is idle
 
 GENERAL:
 - pulse: width% for positive pulse width in relation to whole period + boundary safety wrappers
