channel order fixup. same here.
Tue May 14 04:17:08 2002  Tim Janik  <timj@gtk.org>

        * bsestandardosc.c (bse_standard_osc_class_init): channel order fixup.
        * bseamplifier.c (bse_amplifier_class_init): same here.

svn path=/trunk/; revision=435

--- a/bse/TODO
+++ b/bse/TODO
@@ -25,6 +25,7 @@ NEW:
   and avoid lock contentions during playback)
 - during playback the instrument set needs to be fixed on a song  
 - BSE_SOURCE_GET_CLASS (source)->remove_input() add GslTrans* so clear_input removes really in batches
+- add pre-amplification (0..1) to freeverb for clip prevention
   
 OLD:
 general:
