--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Tue May 14 04:17:08 2002  Tim Janik  <timj@gtk.org>
+
+	* bsestandardosc.c (bse_standard_osc_class_init): channel order fixup.
+	* bseamplifier.c (bse_amplifier_class_init): same here.
+
 Mon May 13 23:27:47 2002  Tim Janik  <timj@gtk.org>
 
 	* icons/biquad.c:
