--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,13 @@
+Tue May 14 21:05:49 2002  Tim Janik  <timj@gtk.org>
+
+	* bsecompressor.[hc]: get rid of this, it's a misnamed and badly
+	parameterized module.
+
+	* bseatandistort.[hc]: new module, offering the atan distortion
+	that could be achived with bsecompressor. this offers a saner linear
+	parameterization range and is a lot faster by using an equivalent
+	approximation of GSL.
+
 Tue May 14 03:40:39 2002  Tim Janik  <timj@gtk.org>
 
 	* davxtalstrings.c (xmod_process): fix clipping bug i just introduced.
